# AEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: AItems.hpp  ALight.hpp  AUI.hpp  CreateInitialState.hpp  GlobalWater.hpp  Item.hpp  UIContainer.hpp  Water.hpp  WebSocketClient.hpp  definitions.hpp  glUtils.hpp  rlights.h
include/Items/: ALight.hpp  Boat.hpp  Player.hpp  Skybox.hpp
include/html/: el_button.hpp  el_if.hpp  el_input.hpp
resources/UI/: engine.css  engine.html  rivals.html  test.html
resources/UI/engine/: add.html
resources/models/sword-final/: sword-final.glb
resources/saves/: save.json
resources/shaders/: water.fs  water.vs
src/: AItems.cpp  ALight.cpp  AUI.cpp  CreateInitialState.cpp  GlobalWater.cpp  Item.cpp  UIContainer.cpp  Water.cpp  WebSocketClient.cpp  glUtils.cpp  main.cpp
src/Items/: ALight.cpp  Boat.cpp  Player.cpp  Skybox.cpp
src/html/: el_button.cpp  el_if.cpp  el_input.cpp
